--- a/index.html
+++ b/index.html
@@ -3,9 +3,133 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Viaggio a Londra</title>
 </head>
 <body>
+
+  <header>
+
+    <h1>Il mio Viaggio a Londra</h1>
+    <img src="./img/prima.0.jpg" alt="prima.0" width="300" title="ruota panoramica">
+    <img src="img/prima.1.jpg" alt="prima.1"  width="300" title="skyline">
+    <img src="img/prima.2.jpg" alt="prima.2" width="300" title="Big Beng">
+    <hr>
+
+  </header>
   
+  <main>
+
+    <!-- Le mie spese -->
+    <section>
+
+      <h3>Le mie spese</h3>
+      <div>
+          <!-- talella -->
+          <table> 
+            <!-- intestazione tabella -->
+            <thead>
+                <th>Numero</th>
+                <th>Descrizione</th>
+                <th>Costo</th>
+            </thead>
+
+            <!-- corpo tabella -->
+            <tbody>
+              <tr>
+                <td>1</td>
+                <td>Biglietto Aereo</td>
+                <td>120 &euro;</td>
+              </tr>
+
+              <tr>
+                <td>1</td>
+                <td>Biglietto Aereo</td>
+                <td>120 &euro;</td>
+              </tr>
+
+              <tr>
+                <td>1</td>
+                <td>Biglietto Aereo</td>
+                <td>120 &euro;</td>
+              <tr>
+
+            </tbody>
+
+            <!-- chiusura tabella -->
+            <tfoot>
+              <tr>
+                <td>Totale</td>
+                <td></td>
+                <td>360 &euro;</td>
+              </tr>
+            </tfoot>
+          </table> 
+
+        <hr>
+      </div>
+    </section>
+
+
+    <!-- Cose da fare -->
+    <section>
+
+      <h3>Cose da fare</h3>
+
+      <!-- lista non ordinata -->
+      <ul>
+        <li>Visitare la Tower of London &#10007;</li>
+        <li>Visitare greenwich &#10003;</li>
+        <li>Ascoltare un artista di strada a Covent Garden &#10003; </li>
+        <li>Mangiare il tipico Fish and Chips ingelese &#10007;</li>
+      </ul>
+      
+      <hr>
+    </section>
+
+    <!-- info utili -->
+    <section>
+
+      <h3>Info utili:</h3>
+
+      <!-- lista ordinata -->
+      <ol>
+        <li>Numeri utili di emergenza</li>
+          <!-- lista non ordinata -->
+          <ul>
+            <li> <strong>999</strong> - Emergenza</li>
+            <li> <strong>101</strong> - Numero polizia</li>
+            <li> <strong>111</strong> - Numero assistenza medica</li>
+          </ul>
+
+        <!-- lista ordinata -->
+        <li>Hotel</li>
+          <!-- lista non ordinata -->
+          <ul>
+            <li> <strong>Nome hotel:</strong> Buckingham Palace</li>
+            <li> <strong>Indirizzo hotel:</strong> Westminster, London SW1A 1AA, Regno Unito</li>
+        </ul>
+
+        <!-- lista ordinata -->
+        <li>Aereo</li>
+          <!-- lista non ordinata -->
+          <ul>
+            <li> <strong>Volo di Andata:</strong>  Y1234X, ore 9.30 da Milano Malpensa</li>
+            <li> <strong>Volo di Ritorno:</strong>  Y1236X, ore 18:30 da London Heathrow</li>
+        </ul>
+      </ol>
+
+      <hr>
+    </section>
+
+    <!-- Le foto -->
+    <section>
+
+      <h3>Le foto</h3>
+      <img src="https://www.abta.com/sites/default/files/styles/large/public/media/uploads/london-400x400-compressor_0.jpg" alt="tamigi" title="tamigi">
+      <img src="https://imgc.allpostersimages.com/img/posters/evening-tower-bridge-and-river-thames-london_u-L-P2QVZJ0.jpg?artPerspective=n" alt="tower bridge" title="Tower Bridge">
+    </section>
+
+  </main>
+
 </body>
 </html>
